--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,16 @@
 .vscode/
 node_modules/
 build/
-temp/
-.env
+
+dist/
+
 coverage/
 ormconfig.json
-dist
-
-tmpFolder/*
-!tmp/.gitkeep
-!tmp/uploads
+tmp/*
 tmp/uploads/*
-!tmpFolder/.gitkeep
+!tmp/uploads
+!tmp/uploads/.gitkeep
+.DS_Store
+
+.env
+ormconfig.json
